--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,6 @@ version = "0.2.0"
 [deps]
 GZip = "92fee26a-97fe-5a0c-ad85-20a5f3185b63"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
+
+[compat]
+julia = "1"
